hphp/hack/test/typecheck/erling_loop6.php.exp
File "erling_loop6.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
File "erling_loop6.php", line 3, characters 18-20:
Expected int
File "erling_loop6.php", line 14, characters 10-16:
But got string
